--- a/yoga.css
+++ b/yoga.css
@@ -20,7 +20,7 @@ background-repeat: no-repeat;
 height: 150px;
 }
 header a { text-decoration: none; }
-header a:link { color: #40407A }
+header a:link { color: #40407A; }
 header a:visited { color: #40407A; }
 header a:hover { color: #FFFFFF; }
 h1 { 
